projects/compiler/test/parser/match_error_case_no_case.abra
match foo { A => 123, => 456 }